--- a/templates/snaps.html
+++ b/templates/snaps.html
@@ -28,8 +28,8 @@
         <div class="snap">
             {% if snap[0] != "" %}
             <div class="snapimage">
-                <a class="snaplink" title="Expand image" href="/snap/{{ camera }}/{{ date }}/{{ snap[0] }}">
-                    <img class="thumbimage" src="../images/gray.jpg" data-src="/snap/{{ camera }}/{{ date }}/{{ snap[0] }}">
+                <a class="snaplink" title="Expand image" href="/thumb/{{ camera }}/{{ date }}/{{ snap[0] }}">
+                    <img class="thumbimage" src="../images/gray.jpg" data-src="/thumb/{{ camera }}/{{ date }}/{{ snap[0] }}">
                 </a>
             </div>
             <div class="snaptimes">
