--- a/templates/wall.html
+++ b/templates/wall.html
@@ -23,7 +23,7 @@
             <div class="camera">{{ camera[1] }}</div>
             <div class="snap">
                 <a class="snaplink" title="Live stream" href="/cameras?function=stream&camera={{ camera[0] }}&date={{ date }}">
-                    <img class="thumbimage" src="/snap/{{ camera[0] }}/{{ date }} }}">
+                    <img class="thumbimage" src="/thumb/{{ camera[0] }}/{{ date }} }}">
                 </a>
                 <div class="controls">
                     <span class="control">
@@ -37,7 +37,7 @@
                         </a>
                     </span>
                     <span class="control">
-                        <a class="control" title="Expand image" href="/image/{{ camera[0] }}/{{ date }}">
+                        <a class="control" title="Expand image" href="/thumb/{{ camera[0] }}/{{ date }}">
                             <img class="controlimage" src="../images/expand-border.png">
                         </a>
                     </span>
