--- a/static/css/camera.css
+++ b/static/css/camera.css
@@ -147,6 +147,26 @@ h1 {
     margin: 4px 4px 4px 4px;
     }
 
+.timestamp {
+    position: absolute;
+    margin-top: auto;
+    bottom: 0;
+    margin-left: auto;
+    left: 0;
+    padding: 4px;
+    text-align: left;
+}
+
+.eventtype {
+    position: absolute;
+    margin-top: auto;
+    top: 0;
+    margin-left: auto;
+    left: 0;
+    padding: 4px;
+    text-align: left;
+}
+
 .snaps {
     margin: 4px 4px 4px 4px;
     display: grid;
