--- a/static/css/camera.css
+++ b/static/css/camera.css
@@ -25,15 +25,12 @@ h1 {
 	font-size: 32px;
 	text-align: left;
 	margin-top: 0px;
-}
+    }
 
 .heading {
-    width: 100%;
-    display: grid;
-    grid-template-columns: auto auto;
-    padding-left: 20px;
-    padding-right: 20px;
-}
+    margin-left: 20px;
+    margin-right: 40px;
+    }
 
 .date {
 	text-align: left;
@@ -44,6 +41,7 @@ h1 {
 	font-size: 20px;
 	text-align: left;
 	margin-top: 10px;
+    margin-left: 20px;
     }
 
 .yearmonth {
@@ -105,10 +103,9 @@ h1 {
     }
 
 .storage {
-	font-size: 20px;
+	font-size: 18px;
 	font-weight: normal;
     margin-top: 20px;
-    margin-bottom: 40px;
     margin-left: 20px;
     }
 
@@ -152,7 +149,7 @@ h1 {
     position: absolute;
     margin-top: auto;
     bottom: 0;
-    margin-left: auto;
+    margin-right: auto;
     left: 0;
     padding: 4px;
     text-align: left;
@@ -161,7 +158,7 @@ h1 {
 .eventtype {
     -webkit-text-stroke: 1px black;
     position: absolute;
-    margin-top: auto;
+    margin-bottom: auto;
     top: 0;
     margin-left: auto;
     left: 0;
@@ -252,11 +249,15 @@ a.control {
     height:100%;
     }
 
-.zoom {
-    transition: transform .2s;
-    margin: 0 auto;
+.statsbutton {
+    float: right;
     }
 
-.zoom:hover {
-    transform: scale(3.0);
+a.statslink {
+    border-radius: 8px;
+    font-size: 16px;
+    color: LightYellow;
+    background-color: Gray;
+    margin: 4px;
+    padding: 8px;
     }
