--- a/static/css/camera.css
+++ b/static/css/camera.css
@@ -25,11 +25,12 @@ h1 {
 	font-size: 32px;
 	text-align: left;
 	margin-top: 0px;
+    margin-left: 20px;
     }
 
 .heading {
     margin-left: 20px;
-    margin-right: 40px;
+    margin-right: 20px;
     }
 
 .date {
@@ -37,17 +38,21 @@ h1 {
     }
 
 .camera {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    }
+
+.cameraname {
     color: Orange;
 	font-size: 20px;
 	text-align: left;
-	margin-top: 10px;
-    margin-left: 20px;
     }
 
 .yearmonth {
     color: Yellow;
-    margin-left: 20px;
-    margin-right: 20px;
+    font-size: 20px;
     }
 
 .day {
@@ -81,7 +86,7 @@ h1 {
 
 .day {
     color: LightYellow;
-	font-size: 40px;
+	font-size: 20px;
 	text-align: right;
     margin-left: 10px;
     margin-right: 10px;
@@ -198,8 +203,8 @@ h1 {
     }
 
 .wall {
-    margin-left: 40px;
-    margin-right: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 4px;
@@ -207,8 +212,8 @@ h1 {
     }
 
 .download {
-    margin-left: 40px;
-    margin-right: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
     }
 
 .input {
