Snap UI drill down

--- a/static/css/camera.css
+++ b/static/css/camera.css
@@ -192,9 +192,9 @@ h1 {
     }
 
 .snaptime {
-    font-size: 12px;
+    font-size: 16px;
     font-weight: normal;
-    text-align: center;
+    text-align: left;
     }
 
 .wall {
