--- a/templates/resource.html
+++ b/templates/resource.html
@@ -46,7 +46,7 @@
                         </select>
                     </span>
                     <span>
-                        <input type='submit' class='button' />
+                        <input type='submit' class='button' value='Set'/>
                     </span>
                 </form>
             </div>
