--- a/static/css/base.css
+++ b/static/css/base.css
@@ -42,6 +42,15 @@ input {
     -webkit-appearance: button;
     }
 
+select {
+    height: 16px;
+    width: 80px;
+    font-size: 12px;
+    color: Black;
+    background-color: LightGray;
+    margin: 2px;
+    }
+
 form {
     margin: 0;
     padding: 0;
