--- a/templates/powerWidget.html
+++ b/templates/powerWidget.html
@@ -1,9 +1,3 @@
-    <!-- power - the current solar power production -->
-    <!-- load - the current load -->
-    <!-- voltage - the current voltage -->
-    <!-- energy - today's energy production -->
-    <!-- lifetime - lifetime energy production -->
-
 {% set resourceTemplate = templates.get_template("resource.html") %}
     <table border=0 width={{ widths[0] }} style='table-layout:fixed'>
         <col width={{ widths[1] }}>
@@ -11,17 +5,23 @@
         <col width={{ (widths[0] - widths[1]) / 5 }}>
         {% endfor %}
         <tr>
-        <td><div class=label>Power production</div></td>
-        <td><div id="{{ power.name.replace(".", "_") }}" class=KW>{{ views.getViewState(power) }}</div></td>
+        <td><div class=label>Solar production</div></td>
+        <td><div id="{{ solar.name.replace(".", "_") }}" class="KW">{{ views.getViewState(solar) }}</div></td>
         <td><div class=rlabel>Load</div></td>
-        <td><div id="{{ load.name.replace(".", "_") }}" class=KVA>{{ views.getViewState(load) }}</div></td>
-        <td><div class=rlabel>Voltage</div></td>
-        <td><div id="{{ voltage.name.replace(".", "_") }}" class=V>{{ views.getViewState(voltage) }}</div></td>
+        <td><div id="{{ load.name.replace(".", "_") }}" class="KVA">{{ views.getViewState(load) }}</div></td>
+        <td><div class=rlabel>Net power</div></td>
+        <td><div id="{{ net.name.replace(".", "_") }}" class="KW-">{{ views.getViewState(net) }}</div></td>
         </tr>
         <tr>
-        <td><div class=label>Energy today</div></td>
-        <td><div id="{{ energy.name.replace(".", "_") }}" class=KWh>{{ views.getViewState(energy) }}</div></td>
-        <td><div class=rlabel>Lifetime</div></td>
-        <td><div id="{{ lifetime.name.replace(".", "_") }}" class=MWh>{{ views.getViewState(lifetime) }}</div></td>
+        <td><div class=label>Solar today</div></td>
+        <td><div id="{{ dailySolar.name.replace(".", "_") }}" class="KWh">{{ views.getViewState(dailySolar) }}</div></td>
+        <td><div class=rlabel>Load today</div></td>
+        <td><div id="{{ dailyLoad.name.replace(".", "_") }}" class="KVAh">{{ views.getViewState(dailyLoad) }}</div></td>
+        <td><div class=rlabel>Net today</div></td>
+        <td><div id="{{ dailyNet.name.replace(".", "_") }}" class="KWh-">{{ views.getViewState(dailyNet) }}</div></td>
+        </tr>
+        <tr>
+        <td><div class=label>Solar Lifetime</div></td>
+        <td><div id="{{ lifetimeSolar.name.replace(".", "_") }}" class="MWh">{{ views.getViewState(lifetimeSolar) }}</div></td>
         </tr>
     </table>
