--- a/templates/iphone.html
+++ b/templates/iphone.html
@@ -30,10 +30,12 @@
             </tr>
         </table>
     </div>
+    <hr>
 
     <div id="dashPage">
         <div class="date">{{ views.getViewState(dayOfWeek) }} {{ views.getViewState(date) }}</div>
         {{ groupTemplate.render(templates=templates, widths=[320, [160, 120, 40]], group=["", dashResources], details=False, name=False, link=False, views=views) }}
+        <hr>
         <div class="dashlinks">
             <div class="link"><button onclick="return show('shadesPage','dashPage');">Shades</button></div>
             <div class="link"><button onclick="return show('lightsPage','dashPage');">Lights</button></div>
@@ -52,11 +54,13 @@
 
     <div id="shadesPage" style="display:none">
         {{ groupTemplate.render(templates=templates, widths=widths[1], group=["", shadeResources], details=False, name=False, link=False, views=views) }}
+        <hr>
         <div class="link"><button onclick="return show('dashPage','shadesPage');">Back</button></div>
     </div>
 
     <div id="lightsPage" style="display:none">
         {{ groupTemplate.render(templates=templates, widths=widths[1], group=["", lightResources], details=False, name=False, link=False, views=views) }}
+        <hr>
         <div class="link"><button onclick="return show('dashPage','lightsPage');">Back</button></div>
     </div>
 
@@ -64,53 +68,73 @@
         {{ spaControls }}
         {{ poolControls }}
         {{ groupTemplate.render(templates=templates, widths=widths[1], group=["", poolResources], details=False, name=False, link=False, views=views) }}
+        <hr>
         <div class="link"><button onclick="return show('dashPage','poolPage');">Back</button></div>
     </div>
 
     <div id="sprinklersPage" style="display:none">
         {{ groupTemplate.render(templates=templates, widths=widths[1], group=["", sprinklerResources], details=False, name=False, link=False, views=views) }}
+        <hr>
         <div class="link"><button onclick="return show('dashPage','sprinklersPage');">Back</button></div>
     </div>
 
     <div id="hvacPage" style="display:none">
         <div class="group">{{ hvacLiving }}</div>
+        <hr>
         <div class="group">{{ hvacBedrooms }}</div>
+        <hr>
         <div class="group">{{ hvacBackHouse }}</div>
+        <hr>
         <div class="link"><button onclick="return show('dashPage','hvacPage');">Back</button></div>
     </div>
 
     <div id="alertPage" style="display:none">
+        {{ groupTemplate.render(templates=templates, widths=widths[1], group=["", modeResources], details=False, name=False, link=False, views=views) }}
+        <hr>
         {{ groupTemplate.render(templates=templates, widths=widths[1], group=["", alertResources], details=False, name=False, link=False, views=views) }}
+        <hr>
+        {{ groupTemplate.render(templates=templates, widths=widths[1], group=["", sendResources], details=False, name=False, link=False, views=views) }}
+        <hr>
         <div class="link"><button onclick="return show('dashPage','alertPage');">Back</button></div>
     </div>
 
     <div id="garagePage" style="display:none">
         {{ groupTemplate.render(templates=templates, widths=widths[1], group=["", garageResources], details=False, name=False, link=False, views=views) }}
+        <hr>
         <div class="link"><button onclick="return show('dashPage','garagePage');">Back</button></div>
     </div>
 
     <div id="powerPage" style="display:none">
-        {{ groupTemplate.render(templates=templates, widths=[320, [200, 100, 20]], group=["", powerResources], details=False, name=False, link=False, views=views) }}
+        {{ groupTemplate.render(templates=templates, widths=[320, [200, 100, 20]], group=["", powerNowResources], details=False, name=False, link=False, views=views) }}
+        <hr>
+        {{ groupTemplate.render(templates=templates, widths=[320, [200, 100, 20]], group=["", powerStatsResources], details=False, name=False, link=False, views=views) }}
+        <hr>
+        {{ groupTemplate.render(templates=templates, widths=[320, [200, 100, 20]], group=["", loadResources], details=False, name=False, link=False, views=views) }}
+        <hr>
         <div class="link"><button onclick="return show('dashPage','powerPage');">Back</button></div>
     </div>
 
     <div id="weatherPage" style="display:none">
         {{ groupTemplate.render(templates=templates, widths=[320, [200, 100, 20]], group=["", weatherResources], details=False, name=False, link=False, views=views) }}
+        <hr>
         <div class="link"><button onclick="return show('dashPage','weatherPage');">Back</button></div>
     </div>
 
     <div id="doorPage" style="display:none">
         {{ groupTemplate.render(templates=templates, widths=[320, [160, 120, 40]], group=["", doorResources], details=False, name=False, link=False, views=views) }}
+        <hr>
         <div class="link"><button onclick="return show('dashPage','doorPage');">Back</button></div>
     </div>
 
     <div id="fireplacePage" style="display:none">
         {{ groupTemplate.render(templates=templates, widths=[320, [100, 92, 128]], group=["", fireplaceResources], details=False, name=False, link=False, views=views) }}
+        <hr>
         <div class="link"><button onclick="return show('dashPage','fireplacePage');">Back</button></div>
     </div>
 
     <div id="holidayPage" style="display:none">
         {{ groupTemplate.render(templates=templates, widths=[320, [100, 92, 128]], group=["", holidayResources], details=False, name=False, link=False, views=views) }}
+        <hr>
         <div class="link"><button onclick="return show('dashPage','holidayPage');">Back</button></div>
     </div>
 
