Living room xmas lights

--- a/templates/events.html
+++ b/templates/events.html
@@ -41,7 +41,7 @@
                     </span>
                 </span>
                 <span class="control">
-                    <a class="control" title="Stream" href="/cameras?function=stream&camera={{ camera }}&date={{ date }}&resource={{ image[1] }}">
+                    <a class="control" title="Play clip" href="/cameras?function=stream&camera={{ camera }}&date={{ date }}&resource={{ image[1] }}">
                         <img class="controlimage" src="../images/play-border.png">
                     </a>
                 </span>
