Move valve logic from ValveInterface to ValveControl. Add valveOff state.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -408,6 +408,10 @@ td {
     color: Lime;
     }
 
+.valveMode_Clean {
+    color: Yellow;
+    }
+
 .valveMode_Moving {
     color: Orange;
     }
