--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,12 +2,13 @@
 <html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en'>
 <head>
     <title>{{ title }}</title>
-    <link rel='stylesheet' type='text/css' href='/css/dashboard.css'> 
+    <link rel='stylesheet' type='text/css' href='/css/dashboard.css'>
     <script src='/js/jquery.js'></script>
     <script src='/js/update.js'></script>
     {{ script }}
 </head>
 <body>
+    <h1>{{ title }}</h1>
     <table border=0 width={{ widths[0] }} style='table-layout:fixed'>
         {% for w in widths[1] %}
         <col width={{ w[0] }}>
@@ -29,4 +30,3 @@
     </table>
 </body>
 </html>
-
